compiler/toc-hir-lowering/tests/snapshots/lowering__lower_int_radix_literal.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "const a := 16#EABC"
---
Package@(dummy)
  Root@(dummy): src/main.t -> ItemId(1)
    Module@(src/main.t:0..18): "<root>"@(dummy)
      StmtBody@(src/main.t:0..18): []
        StmtItem@(src/main.t:0..18): ItemId(0)
          ConstVar@(src/main.t:0..18): const "a"@(src/main.t:6..7)
            ExprBody@(src/main.t:11..18)
              Literal@(src/main.t:11..18): Integer(60092)
