compiler/toc-hir-lowering/tests/snapshots/lowering__lower_loop_stmt.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: loop end loop
---
Package@(dummy)
  Root@(dummy): src/main.t -> ItemId(0)
    Module@(src/main.t:0..13): "<root>"@(dummy)
      StmtBody@(src/main.t:0..13): []
        Loop@(src/main.t:0..13)
