compiler/toc-hir-lowering/tests/snapshots/lowering__lower_paren_expr-2.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "const a := (((1)))"
---
Package@(dummy)
  Root@(dummy): src/main.t -> ItemId(1)
    Module@(src/main.t:0..18): "<root>"@(dummy)
      StmtBody@(src/main.t:0..18): []
        StmtItem@(src/main.t:0..18): ItemId(0)
          ConstVar@(src/main.t:0..18): const "a"@(src/main.t:6..7)
            ExprBody@(src/main.t:14..15)
              Literal@(src/main.t:14..15): Integer(1)
