compiler/toc-hir-lowering/tests/snapshots/lowering__lower_paren_expr.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
expression: "const a := (1)"

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(1)
    Module@(FileId(1), 0..14): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..14): []
        StmtItem@(FileId(1), 0..14): ItemId(0)
          ConstVar@(FileId(1), 0..14): const "a"@(FileId(1), 6..7)
            ExprBody@(FileId(1), 12..13)
              Literal@(FileId(1), 12..13): Integer(1)

