compiler/toc-hir-lowering/tests/snapshots/lowering__lower_pointer_ty-2.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
assertion_line: 61
expression: "type _ : ^int"

---
Package@(dummy)
  Root@(dummy): FileId(1) -> ItemId(1)
    Module@(FileId(1), 0..13): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..13): []
        StmtItem@(FileId(1), 0..13): ItemId(0)
          Type@(FileId(1), 0..13): "_"@(FileId(1), 5..6)
            Pointer@(FileId(1), 9..13): Checked
              Primitive@(FileId(1), 10..13): Int

