compiler/toc-hir-lowering/tests/snapshots/lowering__lower_pointer_ty-3.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "type _ : unchecked ^int"
---
Package@(dummy)
  Root@(dummy): src/main.t -> ItemId(1)
    Module@(src/main.t:0..23): "<root>"@(dummy)
      StmtBody@(src/main.t:0..23): []
        StmtItem@(src/main.t:0..23): ItemId(0)
          Type@(src/main.t:0..23): "_"@(src/main.t:5..6)
            Pointer@(src/main.t:9..23): Unchecked
              Primitive@(src/main.t:20..23): Int
