compiler/toc-hir-lowering/tests/snapshots/lowering__lower_pointer_ty-4.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "type _ : unchecked pointer to int"
---
Package@(dummy)
  Root@(dummy): src/main.t -> ItemId(1)
    Module@(src/main.t:0..33): "<root>"@(dummy)
      StmtBody@(src/main.t:0..33): []
        StmtItem@(src/main.t:0..33): ItemId(0)
          Type@(src/main.t:0..33): "_"@(src/main.t:5..6)
            Pointer@(src/main.t:9..33): Unchecked
              Primitive@(src/main.t:30..33): Int
