compiler/toc-hir-lowering/tests/snapshots/lowering__lower_pointer_ty-5.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
assertion_line: 61
expression: "type _ : pointer to"

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(1)
    Module@(FileId(1), 0..19): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..19): []
        StmtItem@(FileId(1), 0..19): ItemId(0)
          Type@(FileId(1), 0..19): "_"@(FileId(1), 5..6)
            Pointer@(FileId(1), 9..19): Checked
error in file FileId(1) at 17..19: unexpected end of file
| error in file FileId(1) for 17..19: expected type specifier after here

