compiler/toc-hir-lowering/tests/snapshots/lowering__lower_pointer_ty-6.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "type _ : ^"
---
Package@(dummy)
  Root@(dummy): FileId(1) -> ItemId(1)
    Module@(FileId(1), 0..10): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..10): []
        StmtItem@(FileId(1), 0..10): ItemId(0)
          Type@(FileId(1), 0..10): "_"@(FileId(1), 5..6)
            Pointer@(FileId(1), 9..10): Checked
error at (FileId(1), 9..10): unexpected end of file
| error for (FileId(1), 9..10): expected type specifier after here

