compiler/toc-hir-lowering/tests/snapshots/lowering__lower_pointer_ty-8.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "type _ : unchecked pointer to"
---
Package@(dummy)
  Root@(dummy): FileId(1) -> ItemId(1)
    Module@(FileId(1), 0..29): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..29): []
        StmtItem@(FileId(1), 0..29): ItemId(0)
          Type@(FileId(1), 0..29): "_"@(FileId(1), 5..6)
            Pointer@(FileId(1), 9..29): Unchecked
error at (FileId(1), 27..29): unexpected end of file
| error for (FileId(1), 27..29): expected type specifier after here

